Refactoring to add liquidacion by designacion